# FaceRecognitionTerminalDemo

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  build.sh
src/: main.cpp
src/app/: CMakeLists.txt  camera_reader.cpp  camera_reader.h  face_detector.cpp  face_detector.h  face_extractor.cpp  face_extractor.h  person_info.cpp  person_info.h  quface.cpp  quface.h
src/lib/: CMakeLists.txt  cvxtext.cpp  cvxtext.h  handler.cpp  handler.h  logger.cpp  logger.h  thread.cpp  thread.h  utils.cpp  utils.h
src/lib/io/: CMakeLists.txt  hdmi.cpp  hdmi.h  isp.cpp  isp.h  ive.cpp  ive.h  iveapp.cpp  iveapp.h  mipi.cpp  mipi.h  mipi_tx.cpp  mipi_tx.h  mmzimage.cpp  mmzimage.h  mpp.cpp  mpp.h  rp-lcd-mipi-8inch-800x1280.c  rp-lcd-mipi-8inch-800x1280.h  rtsp_vdec_vpss.cpp  rtsp_vdec_vpss.h  utility.cpp  utility.h  vdecoder.cpp  vdecoder.h  vi.cpp  vi.h  vi_vpss.cpp  vi_vpss.h  vi_vpss_vo.cpp  vi_vpss_vo.h  vo.cpp  vo.h  vpss.cpp  vpss.h
